templates/octane-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -c -o .
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: octane
  name: octane
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: octane
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -c -o .
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/octane-helm-default: "true"
        io.kompose.service: octane
    spec:
      containers:
        - env:
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: LOG_FOLDER
              value: /logs/$(POD_NAME)
          image: lifecyclemanagement/octane
          name: octane
          ports:
            - containerPort: 8080
            - containerPort: 8443
            - containerPort: 5701
          resources: {}
          volumeMounts:
            - mountPath: "/opt/octane/repo"
              name: octane-nfs
              subPath: repo
            - mountPath: "/logs"
              name: octane-nfs-log
              subPath: ""
      restartPolicy: Always
      volumes:
        - name: octane-nfs
          persistentVolumeClaim:
            claimName: octane-claim
        - name: octane-nfs-log
          hostPath:
            path: /tmp
            type: DirectoryOrCreate
status: {}
