templates/octane-es-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -c -o .
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: octane-es
  name: octane-es
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: octane-es
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -c -o .
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/octane-helm-default: "true"
        io.kompose.service: octane-es
    spec:
      containers:
        - env:
            - name: ES_JAVA_OPTS
              value: -Xms512m -Xmx512m
            - name: bootstrap.memory_lock
              value: "true"
            - name: cluster.name
              value: elasticsearch
            - name: discovery.type
              value: single-node
            - name: http.host
              value: 0.0.0.0
            - name: transport.host
              value: 0.0.0.0
            - name: xpack.graph.enabled
              value: "false"
            - name: xpack.ml.enabled
              value: "false"
            - name: xpack.monitoring.enabled
              value: "false"
            - name: xpack.security.enabled
              value: "false"
            - name: xpack.watcher.enabled
              value: "false"
          image: docker.elastic.co/elasticsearch/elasticsearch:6.7.2
          name: octane-es
          ports:
            - containerPort: 9300
            - containerPort: 9200
          resources: {}
          securityContext:
            capabilities:
              add:
                - IPC_LOCK
      restartPolicy: Always
status: {}
