templates/octane-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -c -o .
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: octane
  name: octane
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
    - name: "8443"
      port: 8443
      targetPort: 8443
    - name: "5701"
      port: 5701
      targetPort: 5701
  selector:
    io.kompose.service: octane
status:
  loadBalancer: {}
