templates/octane_es-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -c -o .
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: octane-es
  name: octane-es
spec:
  ports:
    - name: "9300"
      port: 9300
      targetPort: 9300
    - name: "9200"
      port: 9200
      targetPort: 9200
  selector:
    io.kompose.service: octane-es
status:
  loadBalancer: {}
